--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
     <title>Portfolio</title>
+    <link rel="icon"  type="image/x-icon" href="./images/logo-favicon.jpg ">
     <header>Doc Design</header>
     <header id="slogan">Decade of experience in design</header>
 </head>
