some more design added padding and logo

--- a/index.html
+++ b/index.html
@@ -1,27 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css" />
     <title>Portfolio</title>
-    <link rel="icon"  type="image/x-icon" href="./images/logo-favicon.jpg ">
+    <link rel="icon" type="image/x-icon" href="./images/logo-favicon.jpg " />
     <header>Doc Design</header>
-    <header id="slogan">Decade of experience in design</header>
-</head>
-<body>
+  </head>
+  <body>
+    <img
+      class="logo-med"
+      src="./images/logo-favicon.jpg"
+      alt="medical insignia"
+    />
     <h1>Introduction</h1>
-        <section class="intro">Studying medicine since a decade, practicing with computrers and patients, solving problem finding solutions.<br>
-        Will design for you keeping your user first, visually appealing and interactive designs that will take your business to the next level. <br>
-        </section>
-        <section class="qualification">
-            <ul>
-                <li>MBBS</li>
-                <li>FCPS</li>
-                <li>Google UX design certificate</li>
-                <li>The odin project certifcate</li>
-                <li>Michigan university course of web design</li>
-            </ul>
-        </section>
-</body>
+
+    <div id="slogan">Decade of experience in design</div>
+
+    <section class="intro">
+      Studying medicine since a decade, practicing with computrers and patients,
+      solving problem finding solutions.<br />
+      Will design for you keeping your user first, visually appealing and
+      interactive designs that will take your business to the next level. <br />
+    </section>
+    <section class="qualification">
+      <ul>
+        <li>MBBS</li>
+        <li>FCPS</li>
+        <li>Google UX design certificate</li>
+        <li>The odin project certifcate</li>
+        <li>Michigan university course of web design</li>
+      </ul>
+    </section>
+  </body>
 </html>
