added padding positoned

--- a/index.html
+++ b/index.html
@@ -14,9 +14,14 @@
       src="./images/logo-favicon.jpg"
       alt="medical insignia"
     />
+    <img
+      class="right-logo"
+      src="./images/bulb top.avif"
+      alt="logo designer bulb"
+    />
     <h1>Introduction</h1>
 
-    <div id="slogan">Decade of experience in design</div>
+    <!-- <div id="slogan">Decade of experience in design</div> -->
 
     <section class="intro">
       Studying medicine since a decade, practicing with computrers and patients,
