--- a/index.html
+++ b/index.html
@@ -5,20 +5,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css" />
     <title>Portfolio</title>
-    <link rel="icon" type="image/x-icon" href="./images/logo-favicon.jpg " />
-    <header>Doc Design</header>
+    <link rel="icon" type="image/png" href="./images/logo-favicon.png" />
+    <nav>
+      <div class="navigation links">
+        <p class="about me">About Me</p>
+        <p class="CV">Dowload CV</p>
+        <p class="Projects">My Projects</p>
+        <a href="https://www.facebook.com" target="_blank" rel="noreferrer"
+          ><img
+            src="./images/icons8-facebook-48.png"
+            alt="facebook profile link"
+        /></a>
+        <a href="https://www.whatsapp.com/" target="_blank" rel="noreferrer"
+          ><img
+            src="./images/icons8-whatsapp.svg"
+            alt="contact by whatsapp"
+            height="48"
+        /></a>
+        <a href="https://shais91.github.co">
+          <img
+            src="./images/icons8-instagram.svg"
+            alt="instagram profile link"
+            height="48"
+        /></a>
+        <img src="./images/icons8-github.svg" alt="github link" height="48" />
+      </div>
+    </nav>
+    <header>DOC DESIGN</header>
   </head>
+
   <body>
     <img
       class="logo-med"
-      src="./images/logo-favicon.jpg"
+      src="./images/logo-favicon.png"
       alt="medical insignia"
     />
-    <img
+    <!-- <img
       class="right-logo"
-      src="./images/bulb top.avif"
+      src="./images/bulb top.png"
       alt="logo designer bulb"
-    />
+    /> -->
     <h1>Introduction</h1>
 
     <!-- <div id="slogan">Decade of experience in design</div> -->
